tests/NormalTests/paczka1/small_fuzzy/73887160.err
Error in line 7: 9TS A530 P6,4
Error in line 4: 9TS S667 373,1
Error in line 9: 9TS A530 2,0
Error in line 10: 9TS S667 40,6
